[gd_scene load_steps=18 format=2]

[ext_resource path="res://InteractivePiece/Enemies/Resource/Laser.gd" type="Script" id=1]
[ext_resource path="res://Resources/Shaders/EnergyBeamPerlin.material" type="Material" id=2]

[sub_resource type="Curve" id=30]
_data = [ Vector2( 0, 0.264773 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=31]
curve = SubResource( 30 )

[sub_resource type="ParticlesMaterial" id=33]
trail_size_modifier = SubResource( 31 )
emission_shape = 5
emission_ring_radius = 128.0
emission_ring_inner_radius = 32.0
emission_ring_height = 100.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -555.0
scale = 0.5

[sub_resource type="Gradient" id=34]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 0.355311, 0.355311, 1 )

[sub_resource type="GradientTexture2D" id=35]
gradient = SubResource( 34 )
width = 8
height = 8
use_hdr = true

[sub_resource type="Gradient" id=39]
offsets = PoolRealArray( 0.595041, 1 )
colors = PoolColorArray( 1, 0.124542, 0.124542, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=40]
gradient = SubResource( 39 )

[sub_resource type="Curve" id=37]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.993056, 100 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=38]
curve = SubResource( 37 )

[sub_resource type="Curve" id=43]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=42]
curve = SubResource( 43 )

[sub_resource type="ParticlesMaterial" id=32]
trail_size_modifier = SubResource( 31 )
emission_shape = 2
emission_box_extents = Vector3( 0.1, 1, 0 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 90.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 72.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 333.0
radial_accel_curve = SubResource( 42 )
damping = 100.0
damping_curve = SubResource( 38 )
scale = 2.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
color_ramp = SubResource( 40 )

[sub_resource type="Gradient" id=28]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=36]
gradient = SubResource( 28 )
width = 8
height = 8
use_hdr = true

[sub_resource type="ParticlesMaterial" id=44]
trail_size_modifier = SubResource( 31 )
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
direction = Vector3( 100, 0, 0 )
spread = 107.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 72.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 333.0
radial_accel_curve = SubResource( 42 )
damping = 100.0
damping_curve = SubResource( 38 )
angle = 720.0
angle_random = 1.0
scale = 5.0
scale_random = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
color_ramp = SubResource( 40 )

[node name="Laser" type="Area2D"]
collision_layer = 0
monitorable = false
space_override = 1
gravity_vec = Vector2( 1, 0 )
gravity = 4096.0
script = ExtResource( 1 )

[node name="Sprite" type="Line2D" parent="."]
light_mask = 2
material = ExtResource( 2 )
points = PoolVector2Array( 0, 0, 1912, 0 )
width = 150.0
default_color = Color( 1, 0, 1, 1 )
texture_mode = 2
joint_mode = 2

[node name="Charge" type="Particles2D" parent="."]
light_mask = 2
z_index = -1
amount = 32
lifetime = 0.5
preprocess = 91.3
local_coords = false
process_material = SubResource( 33 )
texture = SubResource( 35 )

[node name="Muzzle" type="Particles2D" parent="."]
light_mask = 2
position = Vector2( 5.38826e-05, 0 )
amount = 512
lifetime = 0.5
preprocess = 1.0
speed_scale = 2.0
local_coords = false
draw_order = 1
process_material = SubResource( 32 )
texture = SubResource( 36 )

[node name="EndParticles" type="Particles2D" parent="."]
light_mask = 2
position = Vector2( 1909.6, 0 )
rotation = 3.14159
amount = 64
lifetime = 0.8
speed_scale = 2.0
randomness = 1.0
local_coords = false
draw_order = 1
process_material = SubResource( 44 )
texture = SubResource( 36 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 2500, 0 )
collision_mask = 32

[node name="HitBox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -24, -8, 24, 1909.6, 44, 1909.6, -44 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HitRate" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitRate" to="." method="_on_HitRate_timeout"]
